# learn-to-write-an-embedded-on-in-rust

./: .gitignore  README.md
01_wait_forever/: Cargo.toml  Makefile
01_wait_forever/src/: main.rs  panic_wait.rs
01_wait_forever/src/_arch/aarch64/cpu/: boot.rs
01_wait_forever/src/bsp/raspberrypi/: kernel.Id
01_wait_forever/src/cpu/: boot.rs
