[package]
name = "mingo"
version = "0.1.0"
edition = "2021"
authors = ["Tomohiro Kumagai"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
